[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud_placeholder.gd" id="1"]

[node name="HudPlaceholder" type="CanvasLayer"]
script = ExtResource("1")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 12.0
offset_right = 420.0
offset_bottom = 40.0
text = "HUD"

[node name="RoleLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 38.0
offset_right = 520.0
offset_bottom = 66.0
text = "Role: Runner"

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 64.0
offset_right = 280.0
offset_bottom = 92.0
text = "Time: 0s"

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 90.0
offset_right = 280.0
offset_bottom = 118.0
text = "Caught: 0"
